Add bukkit/spigot config guide